--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <div id="viewer"></div>
 </body>
 <!-- <script src="./es5/index.js"></script> -->
-<script src="./IDE.Console/IDE.Console.js"></script>
-<script src="./IDE/IDE.js"></script>
-<script src="./IDE.Renderer/IDE.Renderer.js"></script>
-<script src="./IDE.Scene/IDE.Scene.js"></script>
-<script src="./IDE.Object/IDE.Object.js"></script>
-<script src="./IDE.Object/IDE.Shape.js"></script>
+<script src="./IDB.Console/IDB.Console.js"></script>
+<script src="./IDB/IDB.js"></script>
+<script src="./IDB.Renderer/IDB.Renderer.js"></script>
+<script src="./IDB.Scene/IDB.Scene.js"></script>
+<script src="./IDB.Object/IDB.Object.js"></script>
+<script src="./IDB.Object/IDB.Shape.js"></script>
 <script>
-  var ide = new IDE("viewer");
+  var IDB = new IDB("viewer");
   
-  ide.run();
+  IDB.run();
 </script>
 </html>
