캐릭터 그리기

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   IDBObj.run();
   
-  //이미지 추가
+  //캐릭터 그리기
   var characterImage = new Image();
   characterImage.src = "./image/나연.jpg";
   var character = new Object2D();
